src/widgets/dropdown/index.styl
// Copyright 2024 Furqan Software Ltd. All Rights Reserved.

@require '../../const'
@require '../../func'
@require '../../palette'

:root
	--sleek-dropdown-item-hover-background-color $silverglow

.dropdown
	position relative
	
	&__toggle
		&:not(.-disabled)
			cursor pointer

		&.form__field
			&::before
				content ''
				position absolute
				width 2.5rem
				top 0
				right 0
				bottom 0
				z-index 1
				background-color var(--sleek-surface-background-color)
				background linear-gradient(to right, transparent, var(--sleek-surface-background-color) 1rem, var(--sleek-surface-background-color) 100%)
				pointer-events none

			&::after
				content ''
				position absolute
				width 0
				height 0
				top 50%
				right 0
				z-index 2
				margin -0.125rem 0.5rem 0 0
				border-left 0.25rem solid transparent
				border-top 0.25rem solid lighten($dark, 25%)
				border-right 0.25rem solid transparent

	&__toggle + &__search input
		width 100%

	&__menu
		display none
		flex-direction column
		position absolute
		top 100%
		left 0
		z-index 1000
		min-width 150px
		min-width max-content
		margin 0.25rem 0
		border 1px solid var(--sleek-surface-border-color)
		border-radius 0.25rem
		text-align left
		background-color var(--sleek-surface-background-color)
		box-shadow 0 0.25rem 0.5rem var(--sleek-shadow-color-3)
		
		&.-right
			right 0
			left auto
		
		&.-scroll
			overflow-y auto
			-webkit-overflow-scrolling touch
	
		.dropdown__search
			padding 0.5rem
		
		.dropdown__menu
			top 0
			left 100%
	
	&__item
		padding 0.5rem 1rem
		color var(--sleek-text-default-color)
		transition background-color $fast ease-in
		
		&.-link
			text-decoration none

			&:hover,
			&:focus
				text-decoration none
				color var(--sleek-text-default-color)
		
		&.-drop
			position relative
			padding-right 3rem
			
			&::after
				content ''
				position absolute
				width 0
				height 0
				top 50%
				right 0
				z-index 2
				margin -0.3125rem 0.75rem 0 0
				border-top 0.3125rem solid transparent
				border-left 0.3125rem solid lighten($dark, 25%)
				border-bottom 0.3125rem solid transparent

		&.-active
			position relative
			box-shadow inset 0.5rem 0 0 -0.25rem $blue
		
		&.-disabled
			opacity 0.75
			cursor not-allowed
			
		.badge
			float right
			margin-left 2rem

	&__head
		padding 0.5rem 1rem 0.25rem
		color lighten($dark, 50%)
		font-size 0.95em

	&__tool
		display none
		flex-direction column
		position absolute
		top 100%
		left 0
		z-index 1000
		margin 0.25rem 0
		padding 0.25rem 0.5rem
		border 1px solid var(--sleek-surface-border-color)
		border-radius 0.25rem
		background-color var(--sleek-surface-background-color)
		box-shadow 0 0.0625rem 0.125rem var(--sleek-shadow-color-1)

	&__divider
		border-bottom 1px solid var(--sleek-divider-border-color)

		&:first-child,
		&:last-child
			display none
	
	&__icon
		&.-left
			margin-right 0.5rem

		&.-right
			float right
			margin-left 1rem

	&.-open
		> .dropdown__menu
			display flex

	&.-open:not(.-readonly)
		> .dropdown__tool
			display block

	.-open > .dropdown__toggle
		background-color var(--sleek-dropdown-item-hover-background-color)
		
	&.-notifications
		.dropdown__menu
			width 300px
	
	&.-select
		.dropdown__toggle
			position relative
			padding-right 1.5rem
			overflow hidden
			white-space nowrap

			input[type=radio]
				display none
			
			input[type=radio] + *
				display none
			
			input[type=radio]:checked + *
				display block
		
		.dropdown__menu
			width 100%

			label
				cursor pointer
			
		select
			display none

	&:not(.-readonly)
		.dropdown__item
			&:not(.-disabled)
				cursor pointer

				&:hover,
				&:focus
					background-color var(--sleek-dropdown-item-hover-background-color)
			

	&.-readonly
		.dropdown__item
			cursor default

